tests/baselines/reference/elaboratedErrorsOnNullableTargets01.errors.txt
tests/cases/compiler/elaboratedErrorsOnNullableTargets01.ts(4,1): error TS2322: Type '{ foo: { bar: number; }; }' is not assignable to type '{ foo: { bar: string; }; }'.
  Types of property 'foo' are incompatible.
    Type '{ bar: number; }' is not assignable to type '{ bar: string; }'.
      Types of property 'bar' are incompatible.
        Type 'number' is not assignable to type 'string'.
tests/cases/compiler/elaboratedErrorsOnNullableTargets01.ts(6,1): error TS2322: Type '{ foo: { bar: string; }; }' is not assignable to type '{ foo: { bar: number; }; }'.
  Types of property 'foo' are incompatible.
    Type '{ bar: string; }' is not assignable to type '{ bar: number; }'.
      Types of property 'bar' are incompatible.
        Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/elaboratedErrorsOnNullableTargets01.ts (2 errors) ====
    export declare let x: null | { foo: { bar: string | null } | undefined } | undefined;
    export declare let y: { foo: { bar: number | undefined } };
    
    x = y;
    ~
!!! error TS2322: Type '{ foo: { bar: number; }; }' is not assignable to type '{ foo: { bar: string; }; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{ bar: number; }' is not assignable to type '{ bar: string; }'.
!!! error TS2322:       Types of property 'bar' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
    
    y = x;
    ~
!!! error TS2322: Type '{ foo: { bar: string; }; }' is not assignable to type '{ foo: { bar: number; }; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{ bar: string; }' is not assignable to type '{ bar: number; }'.
!!! error TS2322:       Types of property 'bar' are incompatible.
!!! error TS2322:         Type 'string' is not assignable to type 'number'.